<resources>
    <string name="app_name">Address Book</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">E-Mail:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">Zip:</string>
    <string name="copyright">Copyright 2018 John Diggins</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
</resources>
