<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <GridLayout

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:alignmentMode="alignBounds"

        android:columnCount="2"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="0"
            android:text="@string/name" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text="@string/phone" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="2"
            android:text="@string/email" />

        <TextView
            android:id="@+id/street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="3"
            android:text="@string/street" />
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="4"
            android:text="@string/city"
            />
        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="5"
            android:text="@string/state" />

        <TextView
            android:id="@+id/zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right"
            android:layout_row="6"
            android:text="@string/zip"
             />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0"
            android:ems="10"
            android:inputType="textCapWords"
            android:imeActionLabel="Done"
            android:singleLine="true"
            />


        <EditText
            android:id="@+id/editPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:inputType="phone"
            android:imeActionLabel="Done"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:imeActionLabel="Done"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:ems="10"
            android:inputType="textCapWords"
            android:imeActionLabel="Done"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/editCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:inputType="textCapWords"
            android:imeActionLabel="Done"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/editState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:inputType="textCapWords"
            android:imeActionLabel="Done"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/editZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:ems="10"
            android:inputType="number"
            android:imeActionLabel="Done"
            android:singleLine="true"/>
    </GridLayout>
</android.support.constraint.ConstraintLayout>